Fixed spacing in some components
Fixed spacing/padding issues in some components

--- a/templates/components/product-single-hero/product-single-hero.scss
+++ b/templates/components/product-single-hero/product-single-hero.scss
@@ -20,6 +20,13 @@
   }
 
   .product-single-card {
-    margin: auto!important;
+    margin: auto;
+  }
+
+  @include media-breakpoint-up(lg) {
+    .product-single-card {
+      margin: initial;
+      margin-left: auto;
+    }
   }
 }
